--- a/coc-settings.json
+++ b/coc-settings.json
@@ -12,6 +12,13 @@
     "typescript",
     "typescriptreact"
   ],
+  /* "languageserver": { */
+  /* "graphql": { */
+  /*   "command": "graphql-lsp", */
+  /*   "args": ["server","-m","stream"], */
+  /*   "filetypes": ["typescript", "typescriptreact", "graphql"] */
+  /* } */
+/* }, */
   // python config
   "python.linting.enabled": true,
   "python.linting.pylintEnabled": true,
